First pass with porting to new Recipe caching architecture